--- a/src/Contact.css
+++ b/src/Contact.css
@@ -4,7 +4,9 @@
   flex-direction: row;
   flex-grow: 1;
   justify-content: left;
-  border: 1px solid #000;
+  background: #ccc;
+  margin: .5em 1em;
+  padding: 1em .5em;
 }
 
 .contact span {
